--- a/css/fancy-form/fancy-form/src/css/style.css
+++ b/css/fancy-form/fancy-form/src/css/style.css
@@ -93,6 +93,7 @@
   padding-left: .5em;
   background-color: #2c3e50;
   background-image: none;
+  text-align: center;
   color: #fff;
   font-size: 1.2em;
   cursor: pointer;
@@ -104,6 +105,11 @@
           box-shadow: none;
   border: none;
 }
+
+.fancy-select option {
+  text-align: center;
+}
+
 .fancy-select select::-ms-expand {
   display: none;
 }
